--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -2143,9 +2143,9 @@ a.nameParts{
   .new_wizardNote{
     font-size: 11px;
   }
-  .serflip-card{
+ /* .serflip-card{
     width: 275px ! important;
-  }
+  }*/
  .para-top_website{
     margin-top: 20px ! important;
  }
