--- a/ui/website/src/blockTemplate/ImgTitle/ImgTitle.css
+++ b/ui/website/src/blockTemplate/ImgTitle/ImgTitle.css
@@ -46,10 +46,10 @@
     .BT1_bannerTitle{
       font-size: 37px ! important;
     }
-    .serflip-card{
+   /* .serflip-card{
       width: 300px ! important;
     }
-
+*/
   }
 
 
