--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -121,10 +121,10 @@
     margin-top: 70px;
     margin-left: 32px;
    }
-   .serflip-card{
+   /*.serflip-card{
     width:340px ! important;
     margin-left: 30px ! important;
-   }
+   }*/
   .serflip-card-inner{
     margin-left: 30px;
   } 
@@ -139,10 +139,10 @@
 @media screen and (max-width: 425px) {
   
  
-   .serflip-card{
+  /* .serflip-card{
     width:340px ! important;
     margin-left: 30px ! important;
-   }
+   }*/
   .serflip-card-inner{
     margin-left: 30px;
   } 
