--- a/ui/website/src/allBlocks/Overview/Overview.css
+++ b/ui/website/src/allBlocks/Overview/Overview.css
@@ -76,8 +76,8 @@
   .policyMainDiv{
     margin-top: 30px;
     padding: 40px;
-    width: 1200px;
-    margin-left: 66px;
+    /*width: 1200px;*/
+    /*margin-left: 66px;*/
     box-shadow: 0px 0px 39px -7px #eee;
   }
   @media(max-width : 600px){
