--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -44,13 +44,13 @@
 .Typecomponent1_btn{
   margin-bottom: 50px;
 }
-.TypecomponentBtnImg{
+.AboutUsrighttextImg{
   width: 500px;
   height: 380px;
   padding-top: 50px;
   /*float:right;*/
 }
-.TypecomponentBtnImg img{
+.AboutUsrighttextImg img{
   width: 500px;
   height: 400px;
   object-fit: contain;
