--- a/ui/website/src/allPages/FormContent/FormContent.css
+++ b/ui/website/src/allPages/FormContent/FormContent.css
@@ -19,7 +19,7 @@
 }
 .jobformcontent{
 	margin-bottom: 30px !important;
-	margin-left: 383px ! important;
+	margin-left: 383px;
 }
 .dropZindex{
 	z-index: 10;
@@ -46,7 +46,7 @@
 
 @media screen and (min-width: 768px) {
 
-  .jobformcontent{
-  	margin-left: 400px ! important;
-  }
+	 /* .jobformcontent{
+	  	margin-left: 400px ! important;
+	  }*/
   }
