--- a/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
+++ b/ui/website/src/blockTemplate/Commoninfoblock/Commoninfoblock.css
@@ -12,10 +12,10 @@
 		padding-left: 10px ! important;
 		padding-right: 10px ! important;
 	}
-	.overviewPadding{
+	/*.overviewPadding{
 		padding-right: 20px! important;
 		padding-right: 20px ! important;
-	}
+	}*/
 	.BT3_text ul{
 		padding-left: 12px ! important;
 	}
