--- a/ui/website/src/allBlocks/BlogContent/BlogContent.css
+++ b/ui/website/src/allBlocks/BlogContent/BlogContent.css
@@ -22,6 +22,19 @@
     border-radius: 5px;
     width: 100%;
 }
+.pdfHeight{
+  height: 800px;
+}
+.blogBox table{
+  width: 200px ! important;
+}
+#pdfWrap{
+  /*background-color:#f5f5f5;
+  width: 210mm;
+  min-height: 297mm;
+  margin-left: auto;
+  margin-right : auto;*/
+}
 .blogImgContainerInner{
   height: 450px;
   width: 100%;
@@ -30,6 +43,11 @@
   margin-bottom: 15px;
   padding: 0px;
   background-color: #121212; 
+
+} 
+.blogBox  img {
+  width: 300px;
+  height: auto;
 
 }
 .blogImgContainerInner:hover img{
