--- a/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
+++ b/ui/website/src/blockTemplate/Maincomponent/Maincomponent.css
@@ -323,6 +323,7 @@
         padding-top: 10px ! important;
         padding-left: 0px ! important;
         padding-right: 0px ! important;
+        width: 290px ! important;
     }
     .iogblock4text{
         padding-top: 0px ! important;
@@ -330,6 +331,10 @@
     }
     .center_block_text{
         font-size: 15px ! important;
+        /*margin-left: 23px ! important;*/
+    }
+    .iogblock3text p{
+        text-align: center;
     }
 }
 @media screen and (min-width: 411px) {
