--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -145,3 +145,18 @@
     padding-left: 11px ! important;
   }
 }
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .blogblock{
+      height: 540px ! important;
+    }
+    .blogbtn1{
+      margin-top: 50px ! important;
+    }
+    .blogdate{
+      padding-top: 77px ! important;
+    }
+  }
