--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -2728,3 +2728,58 @@ a.nameParts{
   }*/
  }
 
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+   .roadjourny img{
+    left:400px ! important;
+   }
+   .Journycaro1{
+    left:483px ! important;
+   }
+   .Journycaro2{
+    left:256px ! important;
+   }
+   .add2{
+    right: 0px ! important;
+   }
+   .Journycaro4{
+    left:595px ! important;
+    top:698px ! important;
+   }
+   .Journycaro6{
+    left:162px ! important;
+   }
+   .Journycaro5{
+    left:604px ! important;
+   }
+   .Journycaro7{
+    left:372px ! important;
+   }
+   .Journycaro8{
+    top: 1329px ! important;
+    left: 582px ! important;
+   }
+   .add9{
+    left:185px ! important;
+   }
+   .add7{
+    left:596px ! important;
+    top:241px ! important;
+   }
+   .add8{
+    right: -487px ! important;
+   }
+   .add6{
+    left:85px ! important;
+   }
+   .Journycaro10{
+    left:303px ! important;
+   }
+   .Journycaro9{
+    top: 1123px ! important;
+   }
+  } 
+
