--- a/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/Commonservicesblock/Commonservicesblock.css
@@ -383,3 +383,13 @@
   padding-top: 10px;
 }
 
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .serflip-card{
+      width: 200px ! important;
+    }
+  }  
+
