--- a/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
+++ b/ui/website/src/blockTemplate/CommonservicesblockTitle/Commonservicesblock.css
@@ -435,4 +435,14 @@
   }
 }
 
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+  .newcard{
+    width: 250px ! important;
+  }
+ } 
+
 
