--- a/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
+++ b/ui/website/src/blockTemplate/ConsultDownstream/ConsultDownstream.css
@@ -611,5 +611,63 @@
   .innerBlocktConsult{
     height: 2910px ! important;
   }
- } 
+ }
+
+
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    #consultdown_img0{
+      left:15em ! important;
+
+    }
+     #consultdown_img2{
+      left:15em ! important;
+    }
+     #consultdown_img4{
+      left:15em ! important;
+    }
+     #consultdown_img6{
+      left:15em ! important;
+    }
+    #consultdown_data0{
+      right: 0% ! important;
+      padding-left: 114px ! important;
+    }
+    #consultdown_data2{
+      right: -2% ! important;
+      padding-left: 100px ! important;
+    }
+    #consultdown_data4{
+      right: -2% ! important;
+      padding-left: 100px ! important;
+    }
+    #consultdown_data3{
+      left:-10% ! important;
+    }
+    #consultdown_img5{
+      left:38em ! important;
+    }
+    #consultdown_data1{
+      left:-4% ! important;
+    }
+    #consultdown_img3{
+      left:38em ! important;
+    }
+    #consultdown_img1{
+      left:41em ! important;
+    }
+    #consultdown_data5{
+      padding-right: 115px ! important;
+    }
+    #consultdown_data6{
+      padding-left: 166px ! important;
+    }
+    .downimgtext{
+      left:15em ! important;
+    }
+  }  
+ 
 
