--- a/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
+++ b/ui/website/src/blockTemplate/Typecomponent1/Typecomponent1.css
@@ -96,3 +96,13 @@
 
 }
 
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+  .Typecomponent1Img{
+    width: 350px ! important;
+  }
+}  
+
