--- a/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent1_btn/Typecomponent1_btn.css
@@ -101,7 +101,7 @@
     width: 300px;
   }
   .type1btnDiv{
-    height: 560px ! important;
+    height: 600px ! important;
   }
   
   .iogimg_4{
@@ -157,3 +157,16 @@
      }
 
   }
+
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .TypebtnText{
+      margin-left: 0px ! important;
+    }
+    .BtnImageDown{
+      margin-top: 140px ! important;
+    }
+ }   
