--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -745,6 +745,12 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
       .new_wizardNotefortwo{
         right: -130px ! important;
       }
+      .subdata{
+        padding-left: 0px ! important;
+      }
+      .Aboutuslink{
+        margin-left: 0px ! important;
+      }
 
 
   }
@@ -805,6 +811,22 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
 
 
 }
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+    .jobformcontent{
+        margin-left: 250px ! important;
+    }
+    .jobpageform{
+        margin-top: 80px ! important;
+    }
+    .subdata{
+        padding-left: 0px ! important;
+    }
+
+  }  
 
 
 
