--- a/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
+++ b/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
@@ -234,3 +234,16 @@ left: 35% ! important;
 	}
 /* Styles */
 }
+
+@media only screen 
+  and (min-width: 1024px) 
+  and (max-height: 1366px) 
+  and (orientation: landscape) 
+  and (-webkit-min-device-pixel-ratio: 1.5) {
+	.All1blog1{
+		margin-left: 55px ! important;
+	}
+	.blogtext1{
+		left:5em ! important;
+	}
+  }	
