--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -2619,7 +2619,54 @@ a.nameParts{
     .navigation_tab{
         margin-left: 48px ! important;
     }
-  
+   /* .Journycaro1{
+      left:900px ! important;
+    }
+    .add2{
+      right: -132px ! important;
+    }
+    .Journycaro3{
+      right: 580px ! important;
+      top:360px ! important;
+    }
+    .Journycaro4{
+      left:999px ! important;
+    }
+    .Journycaro6{
+    left:63px ! important;
+  }
+  .Journycaro5{
+        left: 587px ! important;
+        top: 834px ! important;
+  }
+  .Journycaro7{
+    left:817px ! important;
+  }
+  .Journycaro9{
+    left:231px ! important;
+    top:1232px ! important;
+
+  }
+  .Journycaro8{
+    left:945px ! important;
+  }
+  .Journycaro10{
+    left:176px ! important;
+  }
+  .add2{
+    right: -416px ! important;
+    top:-252px ! important;
+  }
+  .add4 {
+    left: 551px ! important;
+    top: 192px ! important;
+     }
+    .add8{
+      right: -756px ! important;
+    }
+    .add10{
+      left: 408px ! important;
+    }*/
 }
 @media screen and (min-width: 1900px) {
       .navigation_tab{
