--- a/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
+++ b/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
@@ -14,6 +14,19 @@
     color: #333;
     font-size: 55px
 }
+.Bolgs_div{
+	margin-top: 120px ! important;
+}
+.BT1_bannerTitleblog_res{
+	 position: relative;
+    color: #fff;
+    font-size: 43px;
+    font-weight: 600;
+    /*left: 27px;*/
+    top: 130px;
+    letter-spacing: 2px;
+
+}
 .blogTitle{
 	margin: 5px 0px;
 	  overflow: hidden;
@@ -188,8 +201,14 @@ left: 35% ! important;
 } 
 @media screen and (min-width: 1900px) {
 	.BolgsHoghDef{
-		margin-left: 130px;
+		/*margin-left: 130px;*/
 	}
+	.Allblog{
+		width: 400px ! important;
+		height: 340px ! important;
+		margin-left: 50px ! important;
+	}
+
 	.blogtext1{
 		left:11em;
 	}
