Karuna added chnages

--- a/ui/website/src/allBlocks/Contactform/Contactform.css
+++ b/ui/website/src/allBlocks/Contactform/Contactform.css
@@ -9,7 +9,7 @@
 .contactformBtn{
   font-weight: 600;
   padding: 10px 20px;
-  margin-top: 15px;
+  /*margin-top: 15px;*/
   color: #fff
 }
 .cuformWall{
