--- a/ui/website/src/allBlocks/BrochureDownladForm/Contactform.css
+++ b/ui/website/src/allBlocks/BrochureDownladForm/Contactform.css
@@ -8,8 +8,8 @@
 }
 .contactformBtn{
   font-weight: 600;
-  padding: 10px 20px;
-  margin-top: 15px;
+  /*padding: 10px 20px;*/
+  /*margin-top: 15px;*/
   color: #fff
 }
 .cuformWall{
