--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -111,7 +111,7 @@
   height: 130px;
   width: 190px;
   object-fit: contain;
-  padding-left: 50px;
+  /*padding-left: 50px;*/
   margin-bottom: 15px;
 }
 
