--- a/ui/website/src/blockTemplate/News_Events/News_Events.css
+++ b/ui/website/src/blockTemplate/News_Events/News_Events.css
@@ -56,10 +56,11 @@
     box-shadow: 0px 0px 2px 3px #c2b9b9;
     width: 60px;
     height: 47px;
-    padding-left:17px;
+    /*padding-left:10px;*/
     padding-top: 7px;
+    overflow: hidden;
     margin-right: 45px;
-    font-size: 12px;
+    font-size: 11px;
     color:#333;
     border-radius: 3px;
 }
