--- a/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
+++ b/ui/website/src/allBlocks/Ourjournyblock/Ourjournyblock.css
@@ -278,7 +278,7 @@ color: #fff;
     z-index: 100;
     height: 75px;
     top: 3px;
-    opacity: 0;
+    /*opacity: 0;*/
 }
 .add11{
   position: relative;
